--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,1 +1,28 @@
-<h3>Welcome</h3>
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="/">Our Logo</a>
+  <form class="form-inline">
+    <a class="btn btn-outline-primary" href="profile" role="button">
+    Profile
+    </a>
+    <div style="padding-left: 10px;">
+      <a class="btn btn-outline-success" href="match/list" role="button">
+      Matches
+      </a>
+    </div>
+    <div style="padding-left: 10px;">
+      <a class="btn btn-outline-success" href="messages" role="button">
+      Messages
+      </a>
+    </div>
+  </form>
+</nav>
+
+<h3>Welcome to Heavy Metal Dating!</h3>
+<% if user_signed_in? %>
+  Logged in as <strong><%= current_user.email %></strong>.
+  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+<% else %>
+  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+<% end %>  
