--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="authform">
   <h3>Edit <%= resource_name.to_s.humanize %></h3>
-  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
+  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :multipart => true, :role => 'form'}) do |f| %>
     <%= devise_error_messages! %>
     <div class="form-group">
       <%= f.label :name %>
@@ -31,6 +31,17 @@
         <%= f.password_field :current_password, class: 'form-control' %>
       </div>
     </fieldset>
+    
+  <% if current_user.avatar.url.present? %>
+    <%= image_tag(current_user.avatar.url)  %>
+    <%= f.label :remove_avatar do %>
+      <%= f.check_box :remove_avatar  %>
+    <% end %>
+  <% end %>
+  <%= f.file_field :avatar   %>
+  <%= f.hidden_field :avatar_cache %>
+<% end %>
+
     <%= f.submit 'Update', :class => 'button right' %>
   <% end %>
 </div>
