--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -19,6 +19,11 @@
 
 <h3>Welcome to Heavy Metal Dating!</h3>
 <% if user_signed_in? %>
+<li class="round-image-50"><%= image_tag(current_user.avatar.url) %></li>
+
+<td><%= current_user.Match %></li></td>
+
+
   Logged in as <strong><%= current_user.email %></strong>.
   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
   <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
