--- a/app/views/visitors/matches.html.erb
+++ b/app/views/visitors/matches.html.erb
@@ -17,10 +17,9 @@
   </form>
 </nav>
 
-<h3>Messages</h3>
-
-<td>
-   <% current_user.getmatches.each do |person| %>
+<h3>Potentials</h3>
+   <td>
+   <% current_user.getpotentials.each do |person| %>
         <td><li class="round-image-50"><%= image_tag(person.avatar.url) %></li></td>
    <% end %></li></td>
    
