--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -5,7 +5,7 @@
     Profile
     </a>
     <div style="padding-left: 10px;">
-      <a class="btn btn-outline-success" href="match/list" role="button">
+      <a class="btn btn-outline-success" href="matches" role="button">
       Matches
       </a>
     </div>
@@ -21,10 +21,7 @@
 <% if user_signed_in? %>
 <li class="round-image-50"><%= image_tag(current_user.avatar.url) %></li>
 
-<td><%= current_user.Match %></li></td>
-
-
-  Logged in as <strong><%= current_user.email %></strong>.
+  Logged in as <strong><%= current_user.id%> <%= current_user.email%></strong>
   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
   <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
 <% else %>
