--- a/app/views/visitors/matches.html.erb
+++ b/app/views/visitors/matches.html.erb
@@ -26,8 +26,10 @@
         <strong><%= person.id %> - <%= person.email %> </strong>
           <table>
           <tr>
-          <td><li class="round-image-50"><img src="images/yes.png">Yes</img></li></td>
-          <td><li class="round-image-50"><img src="images/no.png">Yes</img></li></td>
+          <td>
+          <%= link_to "Like", "like", class: 'like', method: :put, remote: true %>
+            <li class="round-image-50"><img src="images/yes.png">Yes</img></li></td>
+          <td><li class="round-image-50"><img src="images/no.png">No</img></li></td>
           </tr>
           </table>
         </li>
@@ -36,5 +38,28 @@
   </tr>
 </table>
 
-<h3>Liked by</h3>
+<h3>You liked</h3>
+<table>
+  <tr>
+   <% current_user.getsentlikes.each do |person| %>
+        <td>
+        <li class="round-image-50"><%= image_tag(person.avatar.url) %></li>
+        <strong><%= person.id %> - <%= person.email %> </strong>
+        </li>
+        </td>
+   <% end %>
+  </tr>
+</table>
 
+<h3>Liked by</h3>
+<table>
+  <tr>
+   <% current_user.getlikedby.each do |person| %>
+        <td>
+        <li class="round-image-50"><%= image_tag(person.avatar.url) %></li>
+        <strong><%= person.id %> - <%= person.email %> </strong>
+        </li>
+        </td>
+   <% end %>
+  </tr>
+</table>
