--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -24,6 +24,12 @@
   Logged in as <strong><%= current_user.id%> <%= current_user.email%></strong>
   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
   <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+  
+<h3>Test print:</h3>
+   <% current_user.testgetmatches.each do |testmatch| %>
+   <% testmatch.person1%> - % testmatch.person2%> <br>
+   <% end %>
+  
 <% else %>
   <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
   <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
