--- a/app/views/visitors/messages.html.erb
+++ b/app/views/visitors/messages.html.erb
@@ -26,3 +26,16 @@
   </tr>    
   <% end %></li>
 </table>
+
+----
+
+<br>Here comes the partial:<br>
+
+
+<div class=”ui segment”>
+ <h3>Mailbox</h3>
+
+<%= render 'conversation/index.html' %>
+
+</div>
+end
