--- a/app/views/visitors/messages.html.erb
+++ b/app/views/visitors/messages.html.erb
@@ -29,13 +29,13 @@
 
 ----
 
-<br>Here comes the partial:<br>
+<br>Conversations:<br>
 
 
 <div class=”ui segment”>
  <h3>Mailbox</h3>
 
-<%= render 'conversation/index.html' %>
-
+      <a class="btn btn-outline-success" href="/conversations/messages" role="button">
+      Conversations
+      </a>
 </div>
-end
