--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -25,11 +25,11 @@
   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
   <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
   
-<h3>Test print:</h3>
+<h3>Matches:</h3>
    <% current_user.testgetmatches.each do |testmatch| %>
    <%= testmatch.person1_id%> - <%= testmatch.person2_id%> <br>
    <% end %>
-   <br>---<br>
+   <br>Semimatches:<br>
    <% current_user.testgetsemimatches.each do |testmatch| %>
    <%= testmatch.person1_id%> - <%= testmatch.person2_id%> <br>
    <% end %>  
@@ -38,3 +38,14 @@
   <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
   <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
 <% end %>  
+
+<br>Conversations:<br>
+
+
+<div class=”ui segment”>
+ <h3>Mailbox</h3>
+
+      <a class="btn btn-outline-success" href="/conversations" role="button">
+      Conversations
+      </a>
+</div>
