--- a/app/views/visitors/settings.html.erb
+++ b/app/views/visitors/settings.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="/">Our Logo</a>
+  <a class="navbar-brand" href="/"><img src="images/logo.png" width="110" height="85"></a>
   <form class="form-inline">
     <a class="btn btn-outline-primary" href="/profile" role="button">
     Profile
