--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -6,44 +6,30 @@
     </a>
     <div style="padding-left: 10px;">
       <a class="btn btn-outline-success" href="matches" role="button">
-      Matches
+      Swipe
       </a>
     </div>
     <div style="padding-left: 10px;">
       <a class="btn btn-outline-success" href="messages" role="button">
-      Conversations
+      Message
       </a>
     </div>
   </form>
 </nav>
 
-<h3>Welcome to Heavy Metal Dating!</h3>
 <% if user_signed_in? %>
-<p class="round-image-50"><%= image_tag(current_user.avatar.url, alt: "default") %></p>
 
-  Logged in as <strong><%= current_user.id%> <%= current_user.email%></strong>
+<p align="right">
+  Logged in as <strong><%= current_user.email%></strong>
   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
   <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-  
-<h3>Matches:</h3>
-   <% current_user.testgetmatches.each do |testmatch| %>
-   <%= testmatch.person1_id%> - <%= testmatch.person2_id%> <br>
-   <% end %>
-   <br>Semimatches:<br>
-   <% current_user.testgetsemimatches.each do |testmatch| %>
-   <%= testmatch.person1_id%> - <%= testmatch.person2_id%> <br>
-   <% end %>  
-   
-   <a class="btn btn-outline-success" href="/conversations" role="button">
-   Conversations
-   </a>
-
+</p>  
 <% else %>
   <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
   <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
 <% end %>  
 
-<h3>News:</h3>
+<h3>News</h3>
 
 <% if @blog_posts != nil %>
 <% @blog_posts.each do |blogpost| %>
