--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -29,6 +29,9 @@
   <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
 <% end %>  
 
+<strong>Heavy Metal, Punk, Goth, Emo dating \MM/</strong>
+
+
 <h3>News</h3>
 
 <% if @blog_posts != nil %>
