--- a/app/views/visitors/matches.html.erb
+++ b/app/views/visitors/matches.html.erb
@@ -31,7 +31,7 @@ You have <%= current_user.getmatches.length %> matches and you are liked by
   <%= image_tag(person.avatar.url) %>
   <div class="container">
     <h4><b>John Doe</b></h4>
-    <p><%= person.id %> - <%= person.email %></p>
+    <p><%= person.getAge %> - <%= person.email %></p>
           <table>
           <tr>
           <td>
