--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,21 @@
   </div>
 
   <div class="field">
+    <%= f.label :birth_date %><br />
+    <%= f.date_field :birth_date, autofocus: true %>
+  </div>
+
+  <%= radio_button_tag(:sex, "male") %>
+  <%= label_tag(:male, "Male") %>
+  <%= radio_button_tag(:sex, "female") %>
+  <%= label_tag(:female, "Female") %>
+
+  <div class="field">
+    <%= f.label :likes %><br />
+    <%= f.number_field :likes, autofocus: true %>
+  </div>  
+
+  <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
