Frontend sketch for webapp

--- a/app/views/visitors/matches.html.erb
+++ b/app/views/visitors/matches.html.erb
@@ -1,20 +1,22 @@
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="/"><img src="images/logo.png" width="110" height="85"></a>
+  <% if user_signed_in? %>
   <form class="form-inline">
-    <a class="btn btn-outline-primary" href="/profile" role="button">
+    <a class="btn btn-outline-primary" href="profile" role="button">
     Profile
     </a>
     <div style="padding-left: 10px;">
-      <a class="btn btn-outline-success" href="/matches" role="button">
-      Matches
+      <a class="btn btn-outline-success" href="matches" role="button">
+      Swipe
       </a>
     </div>
     <div style="padding-left: 10px;">
-      <a class="btn btn-outline-success" href="/messages" role="button">
-      Messages
+      <a class="btn btn-outline-success" href="messages" role="button">
+      Message
       </a>
     </div>
   </form>
+  <% end %>
 </nav>
 
 You have <%= current_user.getmatches.length %> matches and you are liked by
@@ -31,7 +33,7 @@ You have <%= current_user.getmatches.length %> matches and you are liked by
   <%= image_tag(person.avatar.url) %>
   <div class="container">
     <h4><b>John Doe</b></h4>
-    <p><%= person.getAge %> - <%= person.email %></p>
+    <p><%= person.getAge %> - distance comes here!!!</p>
           <table>
           <tr>
           <td>
