--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,8 +19,7 @@
   <%= label_tag(:female, "Female") %>
 
   <div class="field">
-    <%= f.label :likes %><br />
-    <%= f.number_field :likes, autofocus: true %>
+    <%= f.select :likes, ['metal', 'gothic', 'hardcore', 'emo', 'punk']%>
   </div>  
 
   <div class="field">
