--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="/"><img src="images/logo.png" width="110" height="85"></a>
+  <% if user_signed_in? %>
   <form class="form-inline">
     <a class="btn btn-outline-primary" href="profile" role="button">
     Profile
@@ -15,6 +16,7 @@
       </a>
     </div>
   </form>
+  <% end %>
 </nav>
 
 <% if user_signed_in? %>
