--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,7 +32,6 @@
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
-
   <h2>Profile</h2>
 
   <div class="field">
@@ -51,6 +50,12 @@
     Style: <%= f.select :likes, ['Metal', 'Gothic', 'Hardcore', 'Emo', 'Punk']%>
   </div>  
 
+  <% if current_user.avatar.url.present? %> <%= image_tag(current_user.avatar.url) %>
+    <%= f.label :remove_avatar do %>
+      <%= f.check_box :remove_avatar %>
+    <% end %>
+  <% end %>
+  <%= f.file_field :avatar %> <%= f.hidden_field :avatar_cache %>
 
   <div class="actions">
     <%= f.submit "Update" %>
