--- a/app/views/visitors/matches.html.erb
+++ b/app/views/visitors/matches.html.erb
@@ -32,7 +32,7 @@ You have <%= current_user.getmatches.length %> matches and you are liked by
           
  <div class="card">
   <%= image_tag(person.avatar.url) %>
-  <div class="container" background-color: rgb(201, 76, 76);>
+  <div class="container">
     <h4><b><%= person.name %></b></h4>
     <p><%= person.getAge %> </p>
           <table>
