--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,21 +39,18 @@
   </div>
 
   <div class="field">
-    Gender: <%= f.select :sex, ['Male', 'Female']%>
+    Gender: <%= f.select(:sex, User.sexes.keys.map {|sex| [sex.titleize,sex]}) %>
   </div>
 
   <div class="field">
-    Sexuality: <%= f.select :match_sex, ['Heterosexual', 'Bisexual', 'Homosexual']%>
+    Sexuality: <%= f.select(:sexuality, User.sexualities.keys.map {|sexuality| [sexuality.titleize,sexuality]}) %>
   </div>
 
   <div class="field">
-    Style: <%= f.select :likes, ['Metal', 'Gothic', 'Hardcore', 'Emo', 'Punk']%>
+    Style: <%= f.select(:style, User.styles.keys.map {|style| [style.titleize,style]}) %>
   </div>  
 
   <% if current_user.avatar.url.present? %> <%= image_tag(current_user.avatar.url) %>
-    <%= f.label :remove_avatar do %>
-      <%= f.check_box :remove_avatar %>
-    <% end %>
   <% end %>
   <%= f.file_field :avatar %> <%= f.hidden_field :avatar_cache %>
 
