--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,138 +1,117 @@
 <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="/"><img src="../../images/logo.png" width="110" height="85"></a>
-  <% if user_signed_in? %>
-  <form class="form-inline">
-    <a class="btn btn-outline-primary" href="../../profile" role="button">
-    Profile
-    </a>
-    <div style="padding-left: 10px;">
-      <a class="btn btn-outline-success" href="../../matches" role="button">
-      Swipe
-      </a>
-    </div>
-    <div style="padding-left: 10px;">
-      <a class="btn btn-outline-success" href="../../messages" role="button">
-      Message
-      </a>
-    </div>
-  </form>
-  <% end %>
+    <a class="navbar-brand" href="/"><img src="../../images/logo.png" width="110" height="85"></a>
+    <% if user_signed_in? %>
+    <form class="form-inline">
+        <a class="btn btn-outline-primary" href="../../profile" role="button">
+        Profile
+        </a>
+        <div style="padding-left: 10px;">
+            <a class="btn btn-outline-success" href="../../matches" role="button">
+            Swipe
+            </a>
+        </div>
+        <div style="padding-left: 10px;">
+            <a class="btn btn-outline-success" href="../../messages" role="button">
+            Message
+            </a>
+        </div>
+    </form>
+    <% end %>
 </nav>
-
 <div class="container">
 <div class="messaging">
-      <div class="inbox_msg">
-        <div class="inbox_people">
-          <div class="headind_srch">
+<div class="inbox_msg">
+    <div class="inbox_people">
+        <div class="headind_srch">
             <div class="recent_heading">
-              <h4>Recent</h4>
+                <h4>Recent</h4>
             </div>
             <div class="srch_bar">
-              <div class="stylish-input-group">
-                <input type="text" class="search-bar"  placeholder="Search" >
-                <span class="input-group-addon">
-                <button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
-                </span> </div>
-            </div>
-          </div>
-
-          <div class="inbox_chat">
-            <div class="chat_list active_chat">
-      <% if @conversations != nil %>
-      <% @conversations.each do |conversation| %>
-          <% if conversation.user1_id == current_user.id || conversation.user2_id == current_user.id %>
-            <% if conversation.user1_id == current_user.id %>
-              <% recipient = User.find(conversation.user2_id) %>
-            <% else %>
-              <% recipient = User.find(conversation.user1_id) %>
-            <% end %>
-          <% end %>
-
-              <div class="chat_people">
-                <div class="chat_img">
-                  <%= image_tag(recipient.avatar.url) %>
+                <div class="stylish-input-group">
+                    <input type="text" class="search-bar"  placeholder="Search" >
+                    <span class="input-group-addon">
+                    <button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
+                    </span> 
                 </div>
-                <div class="chat_ib">
-
-                  <h5><%= link_to recipient.name, conversation_messages_path(conversation)%>
-                    <span class="chat_date"></span></h5>
-                  <p></p></p>
-
-                </div>
-              </div>
-      <% end %>
-      <% else %>
-      Conversations is nil! (fix the controller or model!)
-      <% end %>
-          </div>
-          </div>
-          </div>
-
-        <div class="mesgs">
-          <div class="msg_history">
-
-          <% @messages.each do |message| %>
-           <% if message.user_id == current_user.id %>
-
-              <div class="outgoing_msg">
-              <div class="sent_msg">
-            <% else %>
-              <div class="incoming_msg">
-              <div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
-              <div class="received_msg">
-            <% end %>
-
-                <p>
-                  <% if message.body %>
-                    <%= message.body %>
-                  <% else %>
-                  .....
-                  <% end %>
-                </p>
-                <span class="time_date"> 11:01 AM    |    Today</span> </div>
             </div>
-          <% end %>
-
-          </div>
-
-
-<%= form_for [@conversation, @message] do |f| %>
-          <div class="type_msg">
-            <div class="input_msg_write">
-              
-               <%= f.text_field :body, size: 20, value: current_user.id, class: "write_msg", placeholder: "Type a message" %>
-
-              
-              <i class="fa fa-paper-plane-o" aria-hidden="true">
-              <%= submit_tag ">", type:"submit", value:"submit", class:"msg_send_btn"  %>
-              </i>
-            </div>
-          </div>
-<% end %>
-          
         </div>
-      </div>
-
-    </div></div>
-
-
-
-
-
-
+        <div class="inbox_chat">
+            <div class="chat_list active_chat">
+                <% if @conversations != nil %>
+                    <% @conversations.each do |conversation| %>
+                    <% if conversation.user1_id == current_user.id || conversation.user2_id == current_user.id %>
+                        <% if conversation.user1_id == current_user.id %>
+                            <% recipient = User.find(conversation.user2_id) %>
+                        <% else %>
+                            <% recipient = User.find(conversation.user1_id) %>
+                        <% end %>
+                <% end %>
+                <div class="chat_people">
+                    <div class="chat_img">
+                        <%= image_tag(recipient.avatar.url) %>
+                    </div>
+                    <div class="chat_ib">
+                        <h5><%= link_to recipient.name, conversation_messages_path(conversation)%>
+                            <span class="chat_date"></span>
+                        </h5>
+                        <p></p>
+                        </p>
+                    </div>
+                </div>
+                <% end %>
+                <% else %>
+                Conversations is nil! (fix the controller or model!)
+                <% end %>
+            </div>
+        </div>
+    </div>
+    <div class="mesgs">
+        <div class="msg_history">
+            <% @messages.each do |message| %>
+            <% if message.user_id == current_user.id %>
+            <div class="outgoing_msg">
+                <div class="sent_msg">
+                    <% else %>
+                    <div class="incoming_msg">
+                        <div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                        <div class="received_msg">
+                            <% end %>
+                            <p>
+                                <% if message.body %>
+                                    <%= message.body %>
+                                <% else %>
+                                .....
+                                <% end %>
+                            </p>
+                            <span class="time_date"> 11:01 AM    |    Today</span> 
+                        </div>
+                    </div>
+                    <% end %>
+                </div>
+                <%= form_for [@conversation, @message] do |f| %>
+                <div class="type_msg">
+                    <div class="input_msg_write">
+                        <%= f.text_field :body, size: 20, value: current_user.id, class: "write_msg", placeholder: "Type a message" %>
+                        <i class="fa fa-paper-plane-o" aria-hidden="true">
+                        <%= submit_tag ">", type:"submit", value:"submit", class:"msg_send_btn"  %>
+                        </i>
+                    </div>
+                </div>
+                <% end %>
+            </div>
+        </div>
+    </div>
+</div>
 <% if @over_ten %>
- <%= link_to 'Show Previous', '?m=all' %>
+<%= link_to 'Show Previous', '?m=all' %>
 <% end %>
-
 Type your message here:
-
 <%= form_for [@conversation, @message], html: {class: "ui reply form"} do |f| %>
- <div class="field">
-   <%= f.text_area :body, class: "form-control" %>
- </div>
- <%= f.text_field :user_id, value: current_user.id, type: "hidden" %>
- <div>
-   <%= f.submit ">", class: "msg_send_btn" %>
- </div>
-
+<div class="field">
+    <%= f.text_area :body, class: "form-control" %>
+</div>
+<%= f.text_field :user_id, value: current_user.id, type: "hidden" %>
+<div>
+    <%= f.submit ">", class: "msg_send_btn" %>
+</div>
 <% end %>
